2007-04-02	Joel Sherrill <joel@OARcorp.com>

	* libmisc/stackchk/check.c: Add code to check validity of frame pointer
	in addition to the pattern area being overwritten. Also do some
	cleanup.

2007-03-31	Ralf Corsépius <ralf.corsepius@rtems.org>

	* include/rtems/pci.h: Further stdint.h fixed-size types.

2007-03-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* include/rtems/pci.h: Use stdint.h fixed size-types.

2007-03-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/Makefile.am: Move libc/send.c to libc_a_SOURCES.
	* libnetworking/Makefile.am: Move libc/recv.c to libc_a_SOURCES.
	* libnetworking/Makefile.am: Move libc/res_config.h to
	  libc_a_SOURCES (File is being used).
	* libnetworking/libc/iso_addr.c, libnetworking/libc/iso_addr.3:
	Remove (Unused).
	* libnetworking/Makefile.am: Remove libc/iso_addr.c, libc/iso_addr.3.
	* libnetworking/net/ppp-deflate.c, libnetworking/net/bsd-comp.c:
	Remove (Unused).
	* libnetworking/Makefile.am: Remove net/ppp-deflate.c, net/bsd-comp.c.

2007-03-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/libc/addr2ascii.c, libnetworking/libc/ascii2addr.c,
	libnetworking/libc/base64.c, libnetworking/libc/ether_addr.c,
	libnetworking/libc/gethostbydns.c, libnetworking/libc/gethostbyht.c,
	libnetworking/libc/gethostbynis.c,
	libnetworking/libc/gethostnamadr.c,
	libnetworking/libc/gethostname.c, libnetworking/libc/getnetbydns.c,
	libnetworking/libc/getnetbyht.c, libnetworking/libc/getnetbynis.c,
	libnetworking/libc/getnetnamadr.c, libnetworking/libc/getproto.c,
	libnetworking/libc/getprotoent.c, libnetworking/libc/getprotoname.c,
	libnetworking/libc/getservbyname.c,
	libnetworking/libc/getservbyport.c, libnetworking/libc/getservent.c,
	libnetworking/libc/herror.c, libnetworking/libc/inet_addr.c,
	libnetworking/libc/inet_lnaof.c, libnetworking/libc/inet_makeaddr.c,
	libnetworking/libc/inet_net_ntop.c,
	libnetworking/libc/inet_net_pton.c, libnetworking/libc/inet_neta.c,